--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,3 +3,18 @@ apply plugin : 'java'
 apply plugin : 'application'
 
 mainClassName = 'edu.pku.sei.tsr.snowgraph.SnowGraph'
+
+dependencies {
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.1.RELEASE'
+    compile group: 'org.neo4j', name: 'neo4j', version: '3.3.5'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.5'
+    compile project(':api')
+
+    runtime group: 'org.neo4j', name: 'neo4j-ogm-embedded-driver', version: '3.1.0'
+    runtime project(':java-code-extractor')
+}
