--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ allprojects {
     repositories {
         jcenter() 
     }
+
+    apply plugin: 'java'
+
+    sourceCompatibility = 1.10
+    targetCompatibility = 1.10
 }
 
 subprojects {
