--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,19 +1,23 @@
+plugins {
+    id 'org.springframework.boot' version '2.0.2.RELEASE'
+}
 
-apply plugin : 'java'
-apply plugin : 'application'
+apply plugin: 'application'
+apply plugin: 'io.spring.dependency-management'
 
-mainClassName = 'edu.pku.sei.tsr.snowgraph.SnowGraph'
+mainClassName = 'edu.pku.sei.tsr.snowgraph.SnowGraphApplication'
 
 dependencies {
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.1.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-webflux'
+    compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
     compile group: 'org.neo4j', name: 'neo4j', version: '3.3.5'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.5'
     compile project(':api')
+
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile group: 'io.projectreactor', name: 'reactor-test', version: '3.1.7.RELEASE'
 
     runtime group: 'org.neo4j', name: 'neo4j-ogm-embedded-driver', version: '3.1.0'
     runtime project(':java-code-extractor')
