--- a/server/build.gradle
+++ b/server/build.gradle
@@ -10,6 +10,7 @@ mainClassName = 'edu.pku.sei.tsr.snowgraph.SnowGraphApplication'
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-webflux'
     compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile group: 'org.neo4j', name: 'neo4j', version: '3.3.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
