--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,5 +2,6 @@
 apply plugin : 'java'
 
 dependencies {
-    compile "org.neo4j:neo4j-ogm-core:3.1.0"
+    compile group: 'org.neo4j', name: 'neo4j', version: '3.3.5'
+    compile group: 'org.neo4j', name: 'neo4j-ogm-core', version: '3.1.0'
 }
