--- a/code-tokenizer/build.gradle
+++ b/code-tokenizer/build.gradle
@@ -3,6 +3,8 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
-    compile "org.neo4j:neo4j-ogm-core:3.1.0"
+    compile group: 'org.neo4j', name: 'neo4j-ogm-core', version: '3.1.0'
+    compile group: 'org.neo4j', name: 'neo4j', version: '3.3.5'
+    compile group: 'com.hankcs', name: 'hanlp', version: 'portable-1.6.4'
     compile project(':api')
 }
